# measure

./: .gitignore  .pylintrc  README.md  environment-macos-aarch64.yaml  environment.yaml  environment.yml  justfile  pyproject.toml  requirements.txt  setup.cfg
.github/: README.md
.github/workflows/: ci-python-just.yml
docs/source/: conf.py  index.rst
docs/source/api/: measure.rst  modules.rst
measure/: main.py  models.py
notebooks/: data_set_exploration.ipynb
notebooks/.ipynb_checkpoints/: data_set_exploration-checkpoint.ipynb
