[tool.poetry]
name = "measure"
version = "0.1.0"
description = "Quantify and categorize city bike networks"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>","Luis Alvergue <lalver1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
geopandas = "^0.10.2"
pydantic = "^1.9.0"
jupyterlab = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bpython = "^0.22.1"
flake8 = "^4.0.1"
furo = "^2022.2.14"
invoke = "^1.6.0"
isort = "^5.10.1"
myst-parser = "^0.17.0"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-rerunfailures = "^10.2"
pytest-socket = "^0.5.1"
pytest-xdist = "^2.5.0"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
xdoctest = "^0.15.10"
nbstripout = "^0.5.0"

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
